--- a/backend.native/tests/build.gradle
+++ b/backend.native/tests/build.gradle
@@ -146,7 +146,12 @@ def tasksOf(Closure<Task> filter) {
 }
 
 run {
-    def tasks = tasksOf { it instanceof RunKonanTest && !(it instanceof RunStdlibTest) }
+    def tasks = tasksOf {
+        (it instanceof RunKonanTest ||
+         it instanceof RunStandaloneKonanTest ||
+         it instanceof LinkKonanTest) &&
+       !(it instanceof RunStdlibTest ||
+         it instanceof RunExternalTestGroup) }
     dependsOn(tasks)
 }
 
@@ -2382,10 +2387,13 @@ if (isMac()) {
 
 task jsinterop_math(type: RunStandaloneKonanTest) {
     doFirst {
+        def jsinteropScript = isWindows() ? "jsinterop.bat" : "jsinterop"
+        def jsinterop = "$distDir/bin/$jsinteropScript"
         // TODO: We probably need a NativeInteropPlugin for jsinterop?
-        "jsinterop -pkg kotlinx.interop.wasm.math -o $buildDir/jsmath -target wasm32".execute()
+        "$jsinterop -pkg kotlinx.interop.wasm.math -o $buildDir/jsmath -target wasm32".execute()
 
     }
+    dependsOn ':wasm32PlatformLibs'
     disabled = (project.testTarget != 'wasm32')
     goldValue = "e = 2.718281828459045, pi = 3.141592653589793, sin(pi) = 1.2246467991473532E-16, sin(pi/2) = 1.0, ln(1) = 0.0, ln(e) = 1.0\n"
     source = "jsinterop/math.kt"
